--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Step_2_Coreg_rigid/.DS_Store
 Step_3_Coreg_HE_fine/.DS_Store
 Step_5_View_data/.DS_Store
 Step_6_Manuscript_figures/.DS_Store
+.DS_Store
